<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_item_series"
    android:orientation="vertical"
    app:cardCornerRadius="15dp"
    android:elevation="10dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.github.siyamed.shapeimageview.mask.PorterShapeImageView
            android:id="@+id/img_series_poster"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            app:siShape="@drawable/rounded_poster_only_left"
            android:src="@drawable/ic_baseline_image_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/image" />

        <TextView
            android:id="@+id/tv_series_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/movie_title"
            android:layout_marginStart="16dp"
            android:textSize="18sp"
            android:layout_marginEnd="16dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.135"
            app:layout_constraintStart_toEndOf="@+id/img_series_poster"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.09" />

        <TextView
            android:id="@+id/tv_series_launch_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2021"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.097"
            app:layout_constraintStart_toEndOf="@+id/img_series_poster"
            app:layout_constraintTop_toBottomOf="@+id/tv_series_title"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_series_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/on_air"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.107"
            app:layout_constraintStart_toEndOf="@+id/tv_series_launch_year"
            app:layout_constraintTop_toBottomOf="@+id/tv_series_title"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_series_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp"
            android:maxLines="3"
            android:text="@string/lorem"
            android:layout_marginStart="16dp"
            android:ellipsize="end"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.112"
            app:layout_constraintStart_toEndOf="@+id/img_series_poster"
            app:layout_constraintTop_toBottomOf="@+id/tv_series_launch_year"
            app:layout_constraintVertical_bias="0.262" />

        <ImageView
            android:id="@+id/star_icon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_baseline_stars_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.089"
            app:layout_constraintStart_toEndOf="@+id/img_series_poster"
            app:layout_constraintTop_toBottomOf="@+id/tv_series_description"
            app:layout_constraintVertical_bias="0.753" />

        <TextView
            android:id="@+id/tv_series_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_100"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.039"
            app:layout_constraintStart_toEndOf="@+id/star_icon"
            app:layout_constraintTop_toBottomOf="@+id/tv_series_description"
            app:layout_constraintVertical_bias="0.705" />

        <ImageView
            android:id="@+id/favoriteBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_baseline_favorite_border_24"
            app:layout_constraintBottom_toBottomOf="@id/item_container"
            app:layout_constraintEnd_toEndOf="@id/item_container"
            app:layout_constraintHorizontal_bias="0.955"
            app:layout_constraintStart_toStartOf="@+id/img_series_poster"
            app:layout_constraintTop_toBottomOf="@+id/tv_series_description"
            app:layout_constraintVertical_bias="0.823" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>